--- a/galleon/unix.properties
+++ b/galleon/unix.properties
@@ -5,9 +5,11 @@ lib=/usr/share/galleon/lib
 bin=/usr/bin/galleon
 conf=/etc/galleon
 cache=/tmp/galleon.cache
-logfile=/var/log/galleon.log
+#logfile=/var/log/galleon.log
+logfile=../logs/log.txt
 wrapperlog=/var/log/wrapper.log
-logs=/var/log
+#logs=/var/log
+logs=../logs
 data=${root}/data
 apps=${root}/apps
 hme=${root}/hme
