--- a/galleon/build.xml
+++ b/galleon/build.xml
@@ -266,7 +266,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/14/29/"/>                              
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.togo.ToGoOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.togo.ToGoConfiguration"/>                      
@@ -291,7 +291,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/15/46/"/>                              
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.weather.WeatherOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.weather.WeatherConfiguration"/>                      
@@ -321,7 +321,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/16/36/"/>                              
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.music.MusicOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.music.MusicConfiguration"/>                      
@@ -346,7 +346,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/20/38/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.photos.PhotosOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.photos.PhotosConfiguration"/>                      
@@ -370,7 +370,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/18/42/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.shoutcast.ShoutcastOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.shoutcast.ShoutcastConfiguration"/>                      
@@ -395,7 +395,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/17/37/"/>                              
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.musicOrganizer.MusicOrganizerOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.musicOrganizer.MusicOrganizerConfiguration"/>                      
@@ -419,7 +419,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/21/41/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.rss.RSSOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.rss.RSSConfiguration"/>            
@@ -443,7 +443,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/26/30/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.desktop.DesktopOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.desktop.DesktopConfiguration"/>                      
@@ -468,7 +468,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/22/31/"/>                              
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.email.EmailOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.email.EmailConfiguration"/>                      
@@ -492,7 +492,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/23/32/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.internet.InternetOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.internet.InternetConfiguration"/>                      
@@ -516,7 +516,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/25/39/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.playlists.PlaylistsOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.playlists.PlaylistsConfiguration"/>
@@ -541,7 +541,7 @@
           <attribute name="Documentation" value="help.html"/>                              
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.audioScrobbler.AudioScrobblerOptionsPanel"/>            
           <attribute name="Tags" value="Music"/>            
@@ -564,7 +564,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/19/40/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.podcasting.PodcastingOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.podcasting.PodcastingConfiguration"/>                      
@@ -588,7 +588,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/24/34/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.iTunes.iTunesOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.iTunes.iTunesConfiguration"/>                      
@@ -613,7 +613,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/13/28/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.movies.MoviesOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.movies.MoviesConfiguration"/>                      
@@ -637,7 +637,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/28/45/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.videocasting.VideocastingOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.videocasting.VideocastingConfiguration"/>                      
@@ -661,7 +661,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/27/33/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.internetSlideshows.InternetSlideshowsOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.internetSlideshows.InternetSlideshowsConfiguration"/>                      
@@ -685,7 +685,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/29/44/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.upcoming.UpcomingOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.upcoming.UpcomingConfiguration"/>                      
@@ -709,7 +709,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/30/35/"/>                              
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.jukebox.JukeboxOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.jukebox.JukeboxConfiguration"/>                      
@@ -733,7 +733,7 @@
           <attribute name="Documentation" value="http://galleon.tv/content/view/31/43/"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.traffic.TrafficOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.traffic.TrafficConfiguration"/>                      
@@ -756,7 +756,7 @@
           <attribute name="Documentation" value="http://galleon.tv"/>
           <attribute name="Author" value="Leon Nicholls"/>                                        
           <attribute name="Email" value="javahmo@users.sourceforge.net"/>                                                  
-          <attribute name="Homepage" value="http://galleon.sourceforge.net"/>                                                            
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
           <attribute name="Version" value="1.0"/>
           <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.menu.MenuOptionsPanel"/>            
           <attribute name="Configuration" value="org.lnicholls.galleon.apps.menu.MenuConfiguration"/>                      
