--- a/galleon/build.xml
+++ b/galleon/build.xml
@@ -1643,6 +1643,20 @@
 
         <copy file="./media/images/widget/marker.png" tofile="${build}/skins/photos/marker.png" />        
 
+        <copy file="./media/images/photos/bar.png" tofile="${build}/skins/photos/bar.png" />                
+
+        <copy file="./media/images/photos/left.png" tofile="${build}/skins/photos/left.png" />                
+
+        <copy file="./media/images/photos/right.png" tofile="${build}/skins/photos/right.png" />                
+
+        <copy file="./media/images/photos/pagedown.png" tofile="${build}/skins/photos/pagedown.png" />                
+
+        <copy file="./media/images/photos/pageup.png" tofile="${build}/skins/photos/pageup.png" />                
+
+        <copy file="./media/images/photos/up.png" tofile="${build}/skins/photos/up.png" />                
+
+        <copy file="./media/images/photos/down.png" tofile="${build}/skins/photos/down.png" />                
+
         
 
         <copy file="./media/images/togo/background.jpg" tofile="${build}/skins/togo/background.jpg" />
@@ -1812,6 +1826,20 @@
         <copy file="./media/images/jukebox/item.png" tofile="${build}/skins/jukebox/item.png" />                
 
         <copy file="./media/images/jukebox/background.jpg" tofile="${build}/skins/jukebox/background.jpg" />                                        
+
+        <copy file="./media/images/jukebox/bar.png" tofile="${build}/skins/jukebox/bar.png" />                
+
+        <copy file="./media/images/jukebox/left.png" tofile="${build}/skins/jukebox/left.png" />                
+
+        <copy file="./media/images/jukebox/right.png" tofile="${build}/skins/jukebox/right.png" />                
+
+        <copy file="./media/images/jukebox/pagedown.png" tofile="${build}/skins/jukebox/pagedown.png" />                
+
+        <copy file="./media/images/jukebox/pageup.png" tofile="${build}/skins/jukebox/pageup.png" />                
+
+        <copy file="./media/images/jukebox/up.png" tofile="${build}/skins/jukebox/up.png" />                
+
+        <copy file="./media/images/jukebox/down.png" tofile="${build}/skins/jukebox/down.png" />                
 
         
 
